--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="description" content="Alex's Website">
+        <title>
+            Alex Huang
+        </title>
+        <link rel="stylesheet" href="stylesheet.css">
+    </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<header>
+    <h1 id="Title">Alex Huang</h1>
+</header>
+    <div class="About me">
+        <h2>About Me</h2>
+        <img src="/images/headshot.png" alt="Photo of Alex Huang">
+        <p>
+            Hi, I'm Alex Huang! I'm currently a junior at The University of Texas at Austin pursuing a degree in Electrical and Computer Engineering. 
+            <br>
+            <br>
+            Followng the completion of my bachelor's degree, I hope to continue my education in pursuing my masters in Electrical and Computer Engineering - preferably remaining at UT Austin. 
+            <br>
+            <br>
+
+        </p>
+    </div>
+    <div class="contact">
+        <h2 >Contact</h2>
+        <p>If you'd like to get in touch, feel free to email me at<a href="mailto:alexhuang5071@yahoo.com">alexhuang5071@yahoo.com</a>.</p>
+        <br>
+        <br>
+        <p>You can also reach me on my <a href="https://www.linkedin.com/in/alex-huang-utaustin/">LinkedIn</a>.</p>
+    </div>    
 </body>
 </html>
