--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
         <link rel="stylesheet" href="stylesheet.css">
     </head>
 <body>
-
 <header>
     <h1 id="Title">Alex Huang</h1>
 </header>
     <div class="About me">
         <h2>About Me</h2>
-        <img src="/images/headshot.png" alt="Photo of Alex Huang">
+        <img src="images/Headshot.png" alt="Photo of Alex Huang">
         <p>
             Hi, I'm Alex Huang! I'm currently a junior at The University of Texas at Austin pursuing a degree in Electrical and Computer Engineering. 
             <br>
@@ -27,10 +26,9 @@
     </div>
     <div class="contact">
         <h2 >Contact</h2>
-        <p>If you'd like to get in touch, feel free to email me at<a href="mailto:alexhuang5071@yahoo.com">alexhuang5071@yahoo.com</a>.</p>
+        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:alexhuang5071@yahoo.com">alexhuang5071@yahoo.com</a>.</p>
         <br>
-        <br>
-        <p>You can also reach me on my <a href="https://www.linkedin.com/in/alex-huang-utaustin/">LinkedIn</a>.</p>
+        <p>You can also reach me at my <a href="https://www.linkedin.com/in/alex-huang-utaustin/">LinkedIn</a>.</p>
     </div>    
 </body>
 </html>
